--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Student Management System</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+    
 </head>
 <body>
 
@@ -17,10 +17,11 @@
     <div class="card mb-4">
         <div class="card-body d-flex justify-content-between align-items-center">
 
-            <!-- Left side -->
-            <h4 class="mb-0">Student Management System</h4>
+            
+            <a class="navbar-brand mb-0" href="/" style="font-size: 2rem;">Student Management System</a>
 
-            <!-- Right side -->
+
+            
             <div>
                 <a href="{% url 'student_list' %}" class="btn btn-outline-primary btn-sm">
                     Students
